# hrl

./: .buildinfo  .gitignore  CHANGELOG  Makefile  NOTES  README.md  TODO  genindex.html  installation.html  intro.html  make.inc  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: build-deploy-docs.yml  build-docs-html.yml  build-html-and-deploy.yml  test.yml
_sources/: installation.md
_sources/calibration/: how-high-resolution-lum-is-achieved.md  others.md
_sources/getting_started/: minimal-usage-example.md
_sources/reference/: api.md
_sources/templates/: 2-AFC-2-IFC.md  likert-responses.md
_sources/useful-examples/: useful-examples-intro.md
_sources/useful-utils/: show-stimuli.md
calibration/: gamma-correction-linearization.html  how-high-resolution-lum-is-achieved.html  minimal-lum-step.html  others.html  refresh-rate.html
data/libdpxwrapper-0.1/: libdpx.c  testwrapper.py
data/misc/: hrlrc  modeline
data/old/: patterns.py
docs/: _config.yml  _toc.yml  docs-environment.yml  intro.md  modeline2.sh
docs/calibration/: gamma-correction-linearization.md  how-high-resolution-lum-is-achieved.md  minimal-lum-step.md  refresh-rate.md
docs/getting-started/: deploying-in-lab.md  installation.md  minimal-usage-example.md  minimal-usage-example.py
docs/getting_started/: deploying-code-in-lab.md  deploying-in-lab.md  installation.md  minimal-usage-example.md
docs/templates/: 2-AFC.md  2-IFC.md  MLCM.md  MLDS-MLCM.md  MLDS.md  asymmetric-matching.md  managing-data.md  mutual-matching.md  templates-intro.md
docs/useful-examples/: example-text-displays.py  managing-data.md  show-stimuli.md  show-stimuli.py  text-displays.md  text_displays.py  useful-examples-intro.md
examples/: lut.csv  minimal_example_mouse.py  template_experiment_stimuli.py
examples/check_monitor_rate/: check_monitor_rate.py  check_monitor_rate_photodiode.py  clock.py  constants.py  plot_rate.py
examples/color/: example_show_color_image.py
examples/sacha/: experiment.py  generateDesign.py  lut.csv
getting-started/: deploying-in-lab.html  installation.html  minimal-usage-example.html
getting_started/: deploying-code-in-lab.html  deploying-in-lab.html  installation.html  minimal-usage-example.html
hrl/: __init__.py  extra.py  hrl.py  luts.py
hrl/calibration/: measurement.py
hrl/clock/: clock.py
hrl/graphics/: __init__.py  auxilliary.py  datapixx.py  gpu.py  graphics.py  texture.py  viewpixx.py
hrl/input/: input.py
hrl/inputs/: __init__.py  inputs.py  keyboard.py  responsepixx.py
hrl/photometer/: __init__.py  colorcal.py  crscolorcal.py  i1pro.py  minolta.py  optical.py  photometer.py  pyminolta.py
hrl/util/: __init__.py  __main__.py
lib/: __init__.py  extra.py  hrl.py
lib/graphics/: __init__.py  datapixx.py  gpu.py  graphics.py
misc/: setcpu.sh
reference/: api.html
scripts/: base.py  hrl-util  hrl-util.py
templates/: 2-AFC-2-IFC.html  2-AFC.html  2-IFC.html  MLCM.html  MLDS-MLCM.html  MLDS.html  asymmetric-matching.html  likert-responses.html  managing-data.html  mutual-matching.html  templates-intro.html
tests/: conftest.py  test_RGB.py  test_basic.py  test_datapixx.py  test_datapixx_highres.py  test_gamma_correct_RGB.py  test_gamma_correct_grey.py  test_i1pro.py  test_interactive.py  test_minolta.py  test_optical.py  test_viewpixx.py
useful-examples/: managing-data.html  show-stimuli.html  text-displays.html  useful-examples-intro.html
useful-utils/: managing-data.html  show-stimuli.html  text-displays.html  useful-utils-intro.html
(+135 files in other folders)
