[project]
name = "hrl"
dynamic = ['version']
description = "Library for psychophysics experiments, with support for high-resolution luminance CRT monitors (Siemens SMM series)"
license = {file = "LICENSE"}
authors = [
    {name = "Sacha Sokoloski"},
    {name = "Guillermo Aguilar"},
    {name = "Joris Vincent"},
]
maintainers = [
    {name ="Guillermo Aguilar", email = "guillermo.aguilar@tu-berlin.de"},
]

requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pygame",
    "pyopengl",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "pyupgrade",
  "flake8"
]

[project.scripts]
hrl-util = "hrl.util:main"

[project.urls]
repository = 'https://github.com/computational-psychology/hrl'

[build-system]
requires = [
  "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["hrl*"]  # package names should match these glob patterns (["*"] by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools.dynamic]
version = {attr = "hrl.__version__"}


[tool.black]
line-length = 99
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 99