[project]
name = "hrl"
dynamic = ['version']
description = "Library for psychophysics experiments, with support for high-resolution luminance CRT monitors (Siemens SMM series)"
license = { text = "GPL v2" }
authors = [
    { name = "Sacha Sokoloski" },
    { name = "Guillermo Aguilar" },
    { name = "Joris Vincent" },
]
maintainers = [
    { name = "Guillermo Aguilar", email = "guillermo.aguilar@tu-berlin.de" },
]

requires-python = ">=3.8"
dependencies = ["numpy", "pygame", "pyopengl"]

[dependency-groups]
test = ["pytest>=8.3.5"]
docs = [
    "jupyter-book<2",
    "jupytext>=1.13.3",
    "jupyterlab_myst",
    "sphinxcontrib-mermaid",
    "ipykernel>=6.29.5",
    "matplotlib>=3.7.5",
    "pillow>=10.4.0",
]
dev = ["ruff>=0.14.7", { include-group = "test" }, { include-group = "docs" }]

[project.scripts]
hrl-util = "hrl.util:main"

[project.urls]
repository = 'https://github.com/computational-psychology/hrl'


[build-system]
requires = ["setuptools >= 40.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."] # list of folders that contain the packages (["."] by default)
include = [
    "hrl*",
] # package names should match these glob patterns (["*"] by default)
namespaces = false # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools.dynamic]
version = { attr = "hrl.__version__" }

[tool.pytest]
markers = [
    "graphics: mark test as requiring graphics.",
    "inputs: mark test as requiring input.",
    "interactive: mark test as interactive.",
    "pixx: mark test as requiring DataPixx or ViewPixx hardware.",
]
