[metadata]
name = hrl
version = attr: hrl.__version__
description='Library for psychophysics experiments, with support for high-resolution luminance CRT monitors (Siemens SMM series) '
author='Sacha Sokoloski'
author_email='sacha@cs.toronto.edu'
maintainer='Guillermo Aguilar'
maintainer_email='guillermo.aguilar@tu-berlin.de'
license='GPL2'
url='https://github.com/computational-psychology/hrl'

[options]
packages = find:
zip_safe = False
install_requires =
    numpy
    pygame
    pyopengl

[options.entry_points]
console_scripts =
    hrl-util = hrl.util:main